syntax = "proto3";

package proto;

option go_package = "./pb";

message EmptyReq {}

message Response {
  bool success = 1;
  string message = 2;
}

message Msgpack {
  bytes data = 1;
}